--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
+  "publishConfig": {
+   "@YOUR-USERNAME:registry": "https://npm.pkg.github.com"
+ }
   "dependencies": {
     "express": "^3.21.2",
     "socket.io": "^0.9.19"
