--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "node index.js"
   },
   "publishConfig": {
-   "@YOUR-USERNAME:registry": "https://npm.pkg.github.com"
+   "X86Max:registry": "https://npm.pkg.github.com"
  }
   "dependencies": {
     "express": "^3.21.2",
