--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "MiniRedeSocial",
+  "name": "Sigka",
   "version": "0.0.1",
-  "description": "Mini rede social volátil em tempo real",
+  "description": "Simple, Sigka.",
   "main": "index.js",
-  "author": "Willian Carvalho",
+  "author": "SIGKA",
   "license": "MIT",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
